--- a/example/tutorial/index2.html
+++ b/example/tutorial/index2.html
@@ -127,10 +127,10 @@
             <!-- <button type="button" onclick="translateTo();">translate</button>
             <button type="button" onclick="scale();">scale</button>
             <button type="button" onclick="rotate();">rotate</button> -->
-            <a href='#' onClick="translateTo();"><img src='move.png' border='0' width="25"></a>
-            <a href='#' onClick="scale();"><img src='scale.png' border='0' width="25"></a>
-            <a href='#' onClick="rotate();"><img src='rotate.png' border='0' width="25"></a>
-            <a href='#' onClick="removeGesture();"><img src='erase.png' border='0' width="25"></a>
+            <a href='#' onClick="translateTo();"><img src='move_2.png' border='0' width="30"></a>
+            <a href='#' onClick="scale();"><img src='scale_2.png' border='0' width="30"></a>
+            <a href='#' onClick="rotate();"><img src='rotate_2.png' border='0' width="30"></a>
+            <a href='#' onClick="removeGesture();"><img src='erase_2.png' border='0' width="30"></a>
         </div>
     </div>
 
