--- a/figuras_index.html
+++ b/figuras_index.html
@@ -37,6 +37,7 @@
 	<div id="infobutton" onmousedown="controls.enabled = false; // disable controls"
 						onmouseup="controls.enabled = true; // enable controls"
 						onclick="document.getElementById('infobutton').style.display = 'none';
+						document.getElementById('downloadScene').style.display = 'none';
 						document.getElementById('containerSuper').style.display = 'block';">i</div>
 	<div id="downloadScene" onmousedown="controls.enabled = false; // disable controls"
 						onmouseup="controls.enabled = true; // enable controls"
